# jaeger-mcp-server-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
npm/: README.md  install.js  package.json  run.js
src/: config.rs  jaeger.rs  main.rs  server.rs
