[package]
name = "jaeger-mcp-server"
version = "0.4.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "MCP Server for Jaeger (Rust)"
readme = "README.md"
keywords = ["mcp", "jaeger", "opentelemetry", "tracing", "observability"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bin]]
name = "jaeger-mcp-server"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.6", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
